--- a/config/libs.yml
+++ b/config/libs.yml
@@ -20,5 +20,5 @@ javascripts:
 
 stylesheets:
   ol.css: https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v<%= versions[:ol] %>/css/ol.css
-  ol-ext.css: https://cdn.rawgit.com/Viglino/ol-ext/master/dist/ol-ext.css
-  ol-ext.min.css: https://cdn.rawgit.com/Viglino/ol-ext/master/dist/ol-ext.min.css
+  ol-ext.css: https://cdn.jsdelivr.net/gh/Viglino/ol-ext@master/dist/ol-ext.css
+  ol-ext.min.css: https://cdn.jsdelivr.net/gh/Viglino/ol-ext@master/dist/ol-ext.min.css
