--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -32,7 +32,7 @@ development: &default
     show_edit_status:
     show_protocol:
     show_notes:
-    show_completions:
+    show_completions: true
     show_trust:
     show_d3_document_url:
     show_status_updates_for_supporter:
