--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "klarschiff-client",
-  "version": "0.0.1",
-  "author": "Hans Budel <budel@bfpi.de> (https://bfpi.de)",
+  "private": true,
+  "author": "BFPI GmbH <support-klarschiff@bfpi.de> (https://bfpi.de)",
   "dependencies": {
     "billboard.js": "^3.9.4",
     "d3": "^7.8.5",
@@ -9,5 +9,6 @@
     "ol": "^10.3.0",
     "ol-ext": "^4.0.11",
     "proj4": "^2.9.0"
-  }
+  },
+  "packageManager": "yarn@4.7.0"
 }
