--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -1,6 +1,6 @@
 development: &default
   urls:
-    ks_server_url: https://klarschiff.de
+    ks_server_url: http://localhost:3000
     ks_backend_vorgang_url: https://klarschiff.de/backend/vorgang/%s
     ks_demo_url: https://klarschiff.de
     ks_github_url: https://github.com/bfpi/klarschiff-field_service
@@ -10,12 +10,12 @@ development: &default
     not_content_three_url: http://rathaus.rostock.de/sixcms/detail.php?template=seite_umweltamt_wasser_boden_alarmdienst_de&_sid1=&_sid2=rostock_01.c.198934.de&_sid3=39237&_sid4=39245
 
   client:
-    relative_url_root: /client
+    relative_url_root: /
     animate_refresh: 6
     service_code:
     key: hro
-    login_required: true
-    multi_requests_enabled: true
+    login_required: false
+    multi_requests_enabled: false
     name: Klarschiff
     city_long: Demostadt
     city_short: Demo
@@ -32,7 +32,6 @@ development: &default
     show_edit_status:
     show_protocol:
     show_notes:
-    show_completions:
     show_trust:
     show_d3_document_url:
     show_status_updates_for_supporter:
@@ -46,13 +45,13 @@ development: &default
 
   resource_servers:
     city_sdk:
-      site: https://klarschiff.de/citysdk/
+      site: http://172.17.0.1:3001/citysdk/
       format: :json
-      api_key: 1234567890abcdefghijklmnopqrstuv
+      api_key: <API-Key-Frontend>
 
   address_search:
     url: https://geo.sv.rostock.de/geocodr/query?
-    api_key: 1234567890abcdefghijklmnopqrstuv
+    api_key:
     localisator: rostock
     search_request_id_enabled: true
 
