WIP: Neues Layout

--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -16,6 +16,7 @@ development: &default
     key: hro
     login_required: true
     multi_requests_enabled: true
+    skip_extra_homepage: false
     name: Klarschiff
     city_long: Demostadt
     city_short: Demo
