Anpassungen für Layout-Überlagerungen

--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -22,6 +22,8 @@ development: &default
     city_short: Demo
     resources_path: /srv/www/htdocs/klarschiff_resources/
     resources_url: https://demo.klarschiff.de/resources/
+    resources_overview_path: /srv/www/htdocs/klarschiff_resources/requests/
+    resources_overview_remote: false
     logo_url: /resources/images/logo.png
     observations_area_limit: 35
     show_email:
