--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -26,6 +26,8 @@ development: &default
     resources_overview_remote: false
     logo_url: /resources/images/logo.png
     observations_area_limit: 35
+    recent_requests: 6
+    recent_requests_per_row: 2
     show_social_icons: true
     show_email:
     show_abuses:
